--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,10 +11,10 @@ address: 125/A, CA Commercial Area, California, USA
 copyright: Copyright &copy; 2020 Designed by [Themefisher](https://themefisher.com) & Developed by [Getjekyllthemes](https://getjekyllthemes.com)
 
 menu:
-- {name: About, link: '/bianfusia-profile/about'}
-- {name: Blog, link: '/bianfusia-profile/blog'}
-- {name: Portfolio, link: '/bianfusia-profile/portfolio'}
-- {name: Contact, link: '/bianfusia-profile/contact'}
+- {name: About, link: '/about'}
+- {name: Blog, link: '/blog'}
+- {name: Portfolio, link: '/portfolio'}
+- {name: Contact, link: '/contact'}
 
 
 #-------------------------------
@@ -63,30 +63,30 @@ blurb-btn-name: know more
 # Work Process Section
 work-process:
   - title : "Research and Plan"
-    icon : "bianfusia-profile/assets/images/icons/plan.png"
+    icon : "assets/images/icons/plan.png"
     content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     
   - title : "Design and Develop"
-    icon : "bianfusia-profile/assets/images/icons/design.png"
+    icon : "assets/images/icons/design.png"
     content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
     
   - title : "Deliver"
-    icon : "bianfusia-profile/assets/images/icons/print.png"
+    icon : "assets/images/icons/print.png"
     content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
 
 
 # My Team Section
 team:
   - title : "Jack Schenziwe"
-    image : "bianfusia-profile/assets/images/team/member-1.png"
+    image : "assets/images/team/member-1.png"
     designation : "Project Manager"
     
   - title : "Julias Carlie"
-    image : "bianfusia-profile/assets/images/team/member-2.png"
+    image : "assets/images/team/member-2.png"
     designation : "Web Developer"
     
   - title : "John Doe"
-    image : "bianfusia-profile/assets/images/team/member-3.png"
+    image : "assets/images/team/member-3.png"
     designation : "Designer"
 
 
@@ -153,19 +153,19 @@ services:
 
 # Portfolio Home Section
 portfolio-home-items:
-  - image : "bianfusia-profile/assets/images/portfolio/item-1.png"
+  - image : "assets/images/portfolio/item-1.png"
     url: "#"
     
-  - image : "bianfusia-profile/assets/images/portfolio/item-2.png"
+  - image : "assets/images/portfolio/item-2.png"
     url: "#"
     
-  - image : "bianfusia-profile/assets/images/portfolio/item-3.png"
+  - image : "assets/images/portfolio/item-3.png"
     url: "#"
     
-  - image : "bianfusia-profile/assets/images/portfolio/item-4.png"
+  - image : "assets/images/portfolio/item-4.png"
     url: "#"
     
-  - image : "bianfusia-profile/assets/images/portfolio/item-5.png"
+  - image : "assets/images/portfolio/item-5.png"
     url: "#"
 
 
@@ -185,51 +185,51 @@ portfolio-label:
   }
 
 portfolio-items:
-  - image : "bianfusia-profile/assets/images/portfolio/item-1.png"
+  - image : "assets/images/portfolio/item-1.png"
     url: "#"
     portfolio-type:
      - type: "design"
      - type: "illustration"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-2.png"
+  - image : "assets/images/portfolio/item-2.png"
     url: "#"
     portfolio-type:
       - type: "branding"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-3.png"
+  - image : "assets/images/portfolio/item-3.png"
     url: "#"
     portfolio-type:
       - type: "illustration"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-6.png"
+  - image : "assets/images/portfolio/item-6.png"
     url: "#"
     portfolio-type:
       - type: "design"
       - type: "branding"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-8.png"
+  - image : "assets/images/portfolio/item-8.png"
     url: "#"
     portfolio-type:
       - type: "illustration"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-5.png"
+  - image : "assets/images/portfolio/item-5.png"
     url: "#"
     portfolio-type:
       - type: "design"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-1.png"
+  - image : "assets/images/portfolio/item-1.png"
     url: "#"
     portfolio-type:
       - type: "branding"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-3.png"
+  - image : "assets/images/portfolio/item-3.png"
     url: "#"
     portfolio-type:
       - type: "design"
       - type: "illustration"
       - type: "branding"
       
-  - image : "bianfusia-profile/assets/images/portfolio/item-7.png"
+  - image : "assets/images/portfolio/item-7.png"
     url: "#"
     portfolio-type:
       - type: "illustration"
@@ -240,17 +240,17 @@ portfolio-items:
 
 testimonial-items:
   - name: "Jesica Gomez"
-    image: "bianfusia-profile/assets/images/testimonial/client-1.png"
+    image: "assets/images/testimonial/client-1.png"
     designation : "CEO, Funder"
     content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
     
   - name: "Jesica Gomez"
-    image: "bianfusia-profile/assets/images/testimonial/client-1.png"
+    image: "assets/images/testimonial/client-1.png"
     designation: "CEO, Funder"
     content: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
     
   - name: "Jesica Gomez"
-    image: "bianfusia-profile/assets/images/testimonial/client-1.png"
+    image: "assets/images/testimonial/client-1.png"
     designation: "CEO, Funder"
     content: "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <strong>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</strong> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
 
@@ -259,34 +259,34 @@ testimonial-items:
 # Client Slider Section
 
 client-slider-items:
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-1.png"
+  - logo: "assets/images/clients-logo/client-logo-1.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-2.png"
+  - logo: "assets/images/clients-logo/client-logo-2.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-3.png"
+  - logo: "assets/images/clients-logo/client-logo-3.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-4.png"
+  - logo: "assets/images/clients-logo/client-logo-4.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-5.png"
+  - logo: "assets/images/clients-logo/client-logo-5.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-1.png"
+  - logo: "assets/images/clients-logo/client-logo-1.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-2.png"
+  - logo: "assets/images/clients-logo/client-logo-2.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-3.png"
+  - logo: "assets/images/clients-logo/client-logo-3.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-4.png"
+  - logo: "assets/images/clients-logo/client-logo-4.png"
     url: "#"
     
-  - logo: "bianfusia-profile/assets/images/clients-logo/client-logo-5.png"
+  - logo: "assets/images/clients-logo/client-logo-5.png"
     url: "#"
 
 #-------------------------------
