--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,9 +1,9 @@
 #-------------------------------
 # General Site Settings
 
-title: Bianfusia
+title: Benjamin
 logo: 
-author: bianfusia
+author: Benjamin
 description: this is meta description
 email: bianfusia@gmail.com
 #phone: +880 2544 658 256
@@ -17,17 +17,21 @@ menu:
 # Hero Section
 
 hero:
-  hero-title: Hi! I’m <br> Christoher <br> UX designer
+  hero-title: Hi! I’m <br> Benjamin <br> Digital Forensics Examiner <br> Red Teaming and CTF Enthusiast
 
 #-------------------------------
 # Skills Section
 
 skills-title: Skills
 skills:
-- {name: Web Design, color: '#fdb157', value: '90%'}
-- {name: Logo Design, color: '#9473e6', value: '60%'}
-- {name: After Effects, color: '#bdecf6', value: '80%'}
-- {name: Web App, color: '#ffbcaa', value: '70%'}
+- {name: Mobile Forensics, color: '#fdb157', value: '90%'}
+- {name: Computer Forensics, color: '#9473e6', value: '90%'}
+- {name: Python Programming, color: '#bdecf6', value: '80%'}
+- {name: Javascript Programming, color: '#ffbcaa', value: '70%'}
+- {name: SQL, color: '#ffbcaa', value: '60%'}
+- {name: RPA, color: '#ffbcaa', value: '60%'}
+- {name: Burpsuite, color: '#ffbcaa', value: '50%'}
+- {name: Metasploit, color: '#ffbcaa', value: '40%'}
 
 
 #-------------------------------
@@ -35,9 +39,9 @@ skills:
 
 experience-title: Experience
 experience:
-- {name: Junior UX Designer, icon: 'icon-1.png', date: 'Jan 2007 - Feb 2009', organization: 'WEBEX'}
-- {name: UX & UI Designer, icon: 'icon-2.png', date: 'Mar 2009 - Aug 2014', organization: 'AUGMEDIX'}
-- {name: Senior UI Designer, icon: 'icon-3.png', date: 'Sep 2014 - Present', organization: 'THEMEFISHER'}
+- {name: Investigation Officer, icon: 'icon-1.png', date: 'Nov 2013 - Jul 2019', organization: 'CPFB'}
+- {name: Manager (Enforcement), icon: 'icon-2.png', date: 'Jul 2019 - Aug 2021', organization: 'ACRA'}
+- {name: Senior Forensics Examiner, icon: 'icon-3.png', date: 'Sep 2021 - Present', organization: 'CPIB'}
 
 
 #-------------------------------
@@ -45,10 +49,9 @@ experience:
 
 education-title: Education
 education:
-- {name: Marters in UX Design, date: '2006', organization: 'Masassusets Institute of Technology'}
-- {name: Honours in Fine Arts, date: '2004', organization: 'Harvard University'}
-- {name: Higher Secondary Certificat, date: '2000', organization: 'Cardiff School'}
-- {name: Secondary School Certificate, date: '1998', organization: 'Cardiff School'}
+- {name: Bachelor of Science in Marketing, date: '2018', organization: 'Singapore University of Social Sciences'}
+- {name: Diploma in Business Management, date: '2011', organization: 'Nanyang Polytechnic'}
+- {name: GCE 'O' Level, date: '2007', organization: 'First Toa Payoh Secondary School'}
 
 #-------------------------------
 # Portfolio (Section and Page)
