--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,7 +17,7 @@ menu:
 # Hero Section
 
 hero:
-  hero-title: Hi! I’m <br> Benjamin <br> Digital Forensics Examiner <br> Red Teaming and CTF Enthusiast
+  hero-title: Digital Forensics Examiner <br> Red Team and CTF Enthusiast
 
 #-------------------------------
 # Skills Section
