--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -17,7 +17,7 @@ menu:
 # Hero Section
 
 hero:
-  hero-title: Digital Forensics Examiner <br> Red Team and CTF Enthusiast
+  hero-title: Digital Forensics Examiner <br> Coding Enthusiast
 
 #-------------------------------
 # Skills Section
